<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.message.msg.SyncMessageFragment">

    <EditText
        android:id="@+id/et_test_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="3"
        android:text="1"
        android:textColor="@color/blue_398BFF"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintBottom_toTopOf="@+id/rg_test_way"
        app:layout_constraintEnd_toEndOf="@+id/btn_message_auto_test"
        app:layout_constraintStart_toEndOf="@+id/tv_test_count"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/tv_test_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_count"
        android:textColor="@color/black"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_test_count"
        app:layout_constraintStart_toStartOf="@+id/btn_message_auto_test"
        app:layout_constraintTop_toTopOf="@+id/et_test_count" />

    <RadioGroup
        android:id="@+id/rg_test_way"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_message_auto_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/rbtn_push"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:textSize="@dimen/text_14sp"
            android:text="@string/test_way_only_push" />

        <RadioButton
            android:id="@+id/rbtn_push_and_remove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_14sp"
            android:text="@string/test_way_push_and_remove"/>

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_message_auto_test"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="22dp"
        android:text="@string/auto_test"
        android:textColor="@color/black"
        android:textSize="@dimen/text_14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_message_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white_EEEEEE"
        android:overScrollMode="never"
        android:padding="8dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/et_test_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_message_top_bar"
        tools:itemCount="3"
        tools:listitem="@layout/item_sync_message" />

    <include
        android:id="@+id/view_message_top_bar"
        layout="@layout/view_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>